k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: msp
  labels:
    app.kubernetes.io/part-of: msp-api
