k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msp-backend
  namespace: msp
  labels:
    app.kubernetes.io/name: msp-backend
    app.kubernetes.io/part-of: msp-api
spec:
  selector:
    app.kubernetes.io/name: msp-backend
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
