k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msp-backend
  namespace: msp
  labels:
    app.kubernetes.io/name: msp-backend
    app.kubernetes.io/part-of: msp-api
spec:
  ingressClassName: traefik
  rules:
    - host: msp.185.181.10.165.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: msp-backend
                port:
                  number: 80
